Added some small changes

--- a/pb.html
+++ b/pb.html
@@ -79,7 +79,7 @@
                                 <img src="https://eu.ui-avatars.com/api/?name=a" alt="avatar" id="pfp" onclick="" style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;">
                                 <div class="about" id="view">
                                     <div class="usrname"><p id="copy" onclick="copyEvent('copy')"><strong>anonymous#0101</strong></p></div>
-                                    <div class="status" id="bioView"> <i class="fa fa-circle online" aria-hidden="true"></i> <small> Hi there!I'm using ChatCom! </small></div>
+                                    <div class="status" id="bioView"> <i class="fa fa-circle online" aria-hidden="true"></i> <small> Hi there! I'm using ChatCom! </small></div>
                                                                           
                                 </div>
                                 
@@ -122,7 +122,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-                                        <img id="topPfp" src="images/nerdy.png" alt="avatar" style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;">
+                                        <img id="topPfp" src="images/bot.png" alt="avatar" style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;">
                                     </a>
                                     <div class="chat-about">
                                         <h6 class="m-b-0" id="topName">Help Bot</h6>
